build/log/idf_py_stdout_output_8510
[1/12] Performing build step for 'bootloader'
[1/1] cd /workspaces/TANK/build/bootloader/esp-idf/esptool_py && /opt/esp/python_env/idf5.1_py3.8_env/bin/python /opt/esp/idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /workspaces/TANK/build/bootloader/bootloader.bin
Bootloader binary size 0x68c0 bytes. 0x740 bytes (6%) free.
[2/12] No install step for 'bootloader'
[3/12] Completed 'bootloader'
[4/12] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/__/motor_control.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/__/motor_control.c.obj 
ccache /opt/esp/tools/xtensa-esp32-elf/esp-12.2.0_20250801/xtensa-esp32-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.1.7-1-g4b1ae715b8\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/workspaces/TANK/build/config -I/workspaces/TANK -I/opt/esp/idf/components/newlib/platform_include -I/opt/esp/idf/components/freertos/FreeRTOS-Kernel/include -I/opt/esp/idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/opt/esp/idf/components/freertos/esp_additions/include/freertos -I/opt/esp/idf/components/freertos/esp_additions/include -I/opt/esp/idf/components/freertos/esp_additions/arch/xtensa/include -I/opt/esp/idf/components/esp_hw_support/include -I/opt/esp/idf/components/esp_hw_support/include/soc -I/opt/esp/idf/components/esp_hw_support/include/soc/esp32 -I/opt/esp/idf/components/esp_hw_support/port/esp32/. -I/opt/esp/idf/components/heap/include -I/opt/esp/idf/components/log/include -I/opt/esp/idf/components/soc/include -I/opt/esp/idf/components/soc/esp32 -I/opt/esp/idf/components/soc/esp32/include -I/opt/esp/idf/components/hal/esp32/include -I/opt/esp/idf/components/hal/include -I/opt/esp/idf/components/hal/platform_port/include -I/opt/esp/idf/components/esp_rom/include -I/opt/esp/idf/components/esp_rom/include/esp32 -I/opt/esp/idf/components/esp_rom/esp32 -I/opt/esp/idf/components/esp_common/include -I/opt/esp/idf/components/esp_system/include -I/opt/esp/idf/components/esp_system/port/soc -I/opt/esp/idf/components/esp_system/port/include/private -I/opt/esp/idf/components/xtensa/include -I/opt/esp/idf/components/xtensa/esp32/include -I/opt/esp/idf/components/lwip/include -I/opt/esp/idf/components/lwip/include/apps -I/opt/esp/idf/components/lwip/include/apps/sntp -I/opt/esp/idf/components/lwip/lwip/src/include -I/opt/esp/idf/components/lwip/port/include -I/opt/esp/idf/components/lwip/port/freertos/include -I/opt/esp/idf/components/lwip/port/esp32xx/include -I/opt/esp/idf/components/lwip/port/esp32xx/include/arch -I/opt/esp/idf/components/nvs_flash/include -I/opt/esp/idf/components/esp_partition/include -I/opt/esp/idf/components/spi_flash/include -I/workspaces/TANK/components/ps4/src -mlongcalls -Wno-frame-address  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=/workspaces/TANK=. -fmacro-prefix-map=/opt/esp/idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/__/motor_control.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/__/motor_control.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/__/motor_control.c.obj -c /workspaces/TANK/motor_control.c
/workspaces/TANK/motor_control.c:3:29: error: unknown type name 'int8_t'
    3 | void calculate_motor_output(int8_t lx, int8_t ly) {
      |                             ^~~~~~
/workspaces/TANK/motor_control.c:1:1: note: 'int8_t' is defined in header '<stdint.h>'; did you forget to '#include <stdint.h>'?
  +++ |+#include <stdint.h>
    1 | // 左スティック(lx, ly)から左右のモーター出力を計算する関数
/workspaces/TANK/motor_control.c:3:40: error: unknown type name 'int8_t'
    3 | void calculate_motor_output(int8_t lx, int8_t ly) {
      |                                        ^~~~~~
/workspaces/TANK/motor_control.c:3:40: note: 'int8_t' is defined in header '<stdint.h>'; did you forget to '#include <stdint.h>'?
[5/12] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/__/bluetooth_control.c.obj
[6/12] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/__/main.c.obj
/workspaces/TANK/main.c: In function 'app_main':
/workspaces/TANK/main.c:31:14: warning: unused variable 'left' [-Wunused-variable]
   31 |         bool left      = get_ps4_button_left();
      |              ^~~~
/workspaces/TANK/main.c:30:14: warning: unused variable 'down' [-Wunused-variable]
   30 |         bool down      = get_ps4_button_down();
      |              ^~~~
/workspaces/TANK/main.c:29:14: warning: unused variable 'right' [-Wunused-variable]
   29 |         bool right     = get_ps4_button_right();
      |              ^~~~~
/workspaces/TANK/main.c:28:14: warning: unused variable 'up' [-Wunused-variable]
   28 |         bool up        = get_ps4_button_up();
      |              ^~
/workspaces/TANK/main.c:27:14: warning: unused variable 'r3' [-Wunused-variable]
   27 |         bool r3        = get_ps4_button_r3();
      |              ^~
/workspaces/TANK/main.c:26:14: warning: unused variable 'l3' [-Wunused-variable]
   26 |         bool l3        = get_ps4_button_l3();
      |              ^~
/workspaces/TANK/main.c:25:14: warning: unused variable 'options' [-Wunused-variable]
   25 |         bool options   = get_ps4_button_options();
      |              ^~~~~~~
/workspaces/TANK/main.c:24:14: warning: unused variable 'share' [-Wunused-variable]
   24 |         bool share     = get_ps4_button_share();
      |              ^~~~~
/workspaces/TANK/main.c:23:14: warning: unused variable 'r2' [-Wunused-variable]
   23 |         bool r2        = get_ps4_button_r2();
      |              ^~
/workspaces/TANK/main.c:22:14: warning: unused variable 'l2' [-Wunused-variable]
   22 |         bool l2        = get_ps4_button_l2();
      |              ^~
/workspaces/TANK/main.c:21:14: warning: unused variable 'r1' [-Wunused-variable]
   21 |         bool r1        = get_ps4_button_r1();
      |              ^~
/workspaces/TANK/main.c:20:14: warning: unused variable 'l1' [-Wunused-variable]
   20 |         bool l1        = get_ps4_button_l1();
      |              ^~
/workspaces/TANK/main.c:19:14: warning: unused variable 'ps' [-Wunused-variable]
   19 |         bool ps        = get_ps4_button_ps();
      |              ^~
/workspaces/TANK/main.c:14:14: warning: unused variable 'connected' [-Wunused-variable]
   14 |         bool connected = get_ps4_joystick_values(&x, &y);
      |              ^~~~~~~~~
/workspaces/TANK/main.c: At top level:
/workspaces/TANK/main.c:6:20: warning: 'TAG' defined but not used [-Wunused-variable]
    6 | static const char *TAG = "PS4";
      |                    ^~~
ninja: build stopped: subcommand failed.
